ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simplehtml
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: localhost:10005
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: simple-html-service
            port:
              number: 80
